--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,100&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -16,7 +18,7 @@
     <section class="container1">
         <div class="cabecalho">
             <div class="textHead">
-                <h1>FELIZ ANIVERSÁRIO MEU AMOR </h1>
+                <h1>FELIZ ANIVERSÁRIO MEU AMOR! <i class="fa-solid fa-cake-candles"></i> </h1>
                 <p>Não achou que eu não faria nada no seu dia, né?</p>
             </div>
             <div class="imgHead">
@@ -57,24 +59,34 @@
             <div class="imgCard">
                 <img src="sorriso.jpeg">
             </div>
-            <h2>vou cuidar de você</h2>
+            <h2>adsijodjasodijaso</h2>
         </div>
         <div class="cards">
             <div class="imgCard">
                 <img src="beijo2.jpeg">
             </div>
-            <h2>todo o meu amor</h2>
+            <h2>asdjiasdjoasdjas</h2>
         </div>
         <div class="cards">
             <div class="imgCard">
                 <img src="mão.jpeg">
             </div>
-            <h2>Sempre juntos</h2>
+            <h2>asdhuaisdhasiudhiasudas</h2>
         </div>
     </section>
-    
-
-
+    <footer>
+        <section class="homenagem">
+            <h2>Essa é minha homenagem. Minha homenagem a maior fã de One Direction, minha homenagem ao amor da minha
+                vida,
+                minha homenagem a mulher que tanto amo. <BR>
+                </BR>
+                <p>Obrigado por todos esses dias comigo, obrigado por me entender,
+                    aceitar e me amar. Obrigado por tudo mesmo, minha Julinha. </p>
+            </h2>
+            <i>Nunca se esqueca: És o amor da minha vida</i>
+            <div class="iconY"><i class="fa-brands fa-youtube"></i></div>
+        </section>
+    </footer>
 </body>
 
 </html>
