--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
             <div class="imgCard">
                 <img src="sorriso.jpeg">
             </div>
-            <h2>adsijodjasodijaso</h2>
+            <h2>Minha felicidade</h2>
         </div>
         <div class="cards">
             <div class="imgCard">
                 <img src="beijo2.jpeg">
             </div>
-            <h2>asdjiasdjoasdjas</h2>
+            <h2>Meu amor todinho</h2>
         </div>
         <div class="cards">
             <div class="imgCard">
                 <img src="mão.jpeg">
             </div>
-            <h2>asdhuaisdhasiudhiasudas</h2>
+            <h2>Sempre juntos</h2>
         </div>
     </section>
     <footer>
@@ -84,7 +84,7 @@
                     aceitar e me amar. Obrigado por tudo mesmo, minha Julinha. </p>
             </h2>
             <i>Nunca se esqueca: És o amor da minha vida</i>
-            <div class="iconY"><i class="fa-brands fa-youtube"></i></div>
+            <div class="iconY"><a href="https://www.youtube.com/playlist?list=PLGdA5VXDtUy-UzjCs701tno20w3a1f0xU" target="_blank"><i class="fa-brands fa-youtube"></i></a></div>
         </section>
     </footer>
 </body>
