Atualização e organização das pastas de imagens

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>Não achou que eu não faria nada no seu dia, né?</p>
             </div>
             <div class="imgHead">
-                <img src="aniversario3.jpeg">
+                <img src="./assets/imgs/aniversario3.jpeg">
             </div>
         </div>
     </section>
@@ -30,7 +30,7 @@
         <h1>Esse é o <mark>meu</mark> projeto. Minha declaração de <mark>amor</mark> por você nessa data. Meu presente
             especial <mark>para minha princesa.</mark></h1>
         <div class="imgfullsize">
-            <img src="fullsize.jpg">
+            <img src="./assets/imgs/fullsize.jpg">
         </div>
     </section>
     <section class="container2">
@@ -57,19 +57,19 @@
     <section class="container3">
         <div class="cards">
             <div class="imgCard">
-                <img src="sorriso.jpeg">
+                <img src="./assets/imgs/sorriso.jpeg">
             </div>
             <h2>Minha felicidade</h2>
         </div>
         <div class="cards">
             <div class="imgCard">
-                <img src="beijo2.jpeg">
+                <img src="./assets/imgs/beijo2.jpeg">
             </div>
             <h2>Meu amor todinho</h2>
         </div>
         <div class="cards">
             <div class="imgCard">
-                <img src="mão.jpeg">
+                <img src="./assets/imgs/mão.jpeg">
             </div>
             <h2>Sempre juntos</h2>
         </div>
